--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -122,7 +122,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest] #, windows-latest, macos-13, macos-14]
+        os: [ubuntu-latest, macos-13] #, windows-latest, macos-13, macos-14]
     
     steps:
       - uses: actions/checkout@v4
