--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -30,3 +30,6 @@ build = "cp3{10,11,12}-manylinux_x86_64"
 
 [tool.cibuildwheel.linux]
 before-all = "yum update && yum -y install lapack-devel"
+
+[tool.cibuildwheel.macos]
+before-all = "brew update && brew install lapack"
