--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -26,7 +26,7 @@ markers = [
 
 
 [tool.cibuildwheel]
-build = "cp3{10,11,12}-manylinux_x86_64"
+build = ["cp310-*", "cp311-*", "cp312-*"]
 
 [tool.cibuildwheel.linux]
 before-all = "yum update && yum -y install lapack-devel"
