--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -27,6 +27,7 @@ markers = [
 
 [tool.cibuildwheel]
 build = ["cp310-*", "cp311-*", "cp312-*"]
+skip = ["*-manylinux_i686", "-musllinux_*"]
 
 [tool.cibuildwheel.linux]
 before-all = "yum update && yum -y install lapack-devel"
