--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -156,7 +156,7 @@ jobs:
         env:
           CIBW_BUILD_VERBOSITY: 3
           CIBW_BUILD_FRONTEND: build
-          MACOSX_DEPLOYMENT_TARGET: "13.0"
+          # MACOSX_DEPLOYMENT_TARGET: "13.0"
           # CIBW_BEFORE_TEST: pip install pytest
           # CIBW_TEST_COMMAND: pytest {project}/python/tests
 
