--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -27,10 +27,17 @@ markers = [
 
 [tool.cibuildwheel]
 build = ["cp310-*", "cp311-*", "cp312-*"]
-skip = ["*-manylinux_i686", "*-musllinux_*"]
+skip = ["*-manylinux_i686", "*-musllinux_*", "*-win32"]
 
 [tool.cibuildwheel.linux]
 before-all = "yum update && yum -y install lapack-devel"
 
 [tool.cibuildwheel.macos]
 before-all = "brew update && brew install lapack"
+
+[tool.cibuildwheel.windows]
+before-all = """
+    choco install mingw -y
+    set PATH=C:\tools\mingw64\bin;%PATH%
+    pacman -S mingw-w64-x86_64-lapack --noconfirm
+    """
