--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -38,6 +38,6 @@ before-all = "brew update && brew install lapack"
 [tool.cibuildwheel.windows]
 before-all = """
     choco install mingw -y
-    set PATH=C:\tools\mingw64\bin;%PATH%
+    set PATH=C:\\tools\\mingw64\\bin;%PATH%
     pacman -S mingw-w64-x86_64-lapack --noconfirm
     """
