--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -37,7 +37,8 @@ before-all = "brew update && brew install lapack"
 
 [tool.cibuildwheel.windows]
 before-all = """
-    choco install mingw -y
-    set PATH=C:\\tools\\mingw64\\bin;%PATH%
-    pacman -S mingw-w64-x86_64-lapack --noconfirm
-    """
+    git clone https://github.com/microsoft/vcpkg.git
+    cd vcpkg
+    .\\bootstrap-vcpkg.bat
+    .\\vcpkg install lapack
+"""
