--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -40,5 +40,5 @@ before-all = """
     git clone https://github.com/microsoft/vcpkg.git
     cd vcpkg
     .\\bootstrap-vcpkg.bat
-    .\\vcpkg install lapack
+    .\\vcpkg install lapack blas
 """
