--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -122,7 +122,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest] #, windows-latest, macos-13, macos-14]
+        os: [ubuntu-latest] #, windows-latest, macos-13, macos-14]
     
     steps:
       - uses: actions/checkout@v4
@@ -157,8 +157,8 @@ jobs:
           CIBW_BUILD_VERBOSITY: 3
           CIBW_BUILD_FRONTEND: build
           # MACOSX_DEPLOYMENT_TARGET: "13.0"
-          # CIBW_BEFORE_TEST: pip install pytest
-          # CIBW_TEST_COMMAND: pytest {project}/python/tests
+          CIBW_BEFORE_TEST: pip install pytest
+          CIBW_TEST_COMMAND: pytest {project}/python/tests
 
       - uses: actions/upload-artifact@v4
         with:
