--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*.whl
 fort.*
 .stuff
 build
@@ -69,3 +70,6 @@ iters
 n2c8data
 prpxy
 wheelhouse
+python/numpy-2.0.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
+python/yaeos-0.1.0-cp312-cp312-linux_x86_64.whl
+python/fpm_build
