--- a/python/tox.ini
+++ b/python/tox.ini
@@ -23,10 +23,11 @@ python =
 deps =
     ipdb
     pytest
-skip_install = False
-usedevelop = True
+skip_install = True
+usedevelop = False
 commands =
-    pytest tests/ {posargs}
+    pip install .
+    pytest tests/ {posargs} --import-mode=importlib
 
 
 [testenv:style]
