--- a/fpm.toml
+++ b/fpm.toml
@@ -28,6 +28,7 @@ json-fortran = {git="https://github.com/jacobwilliams/json-fortran"}
 forsus = {git="https://github.com/ipqa-research/forsus"}
 fortime = { git = "https://github.com/gha3mi/fortime.git" }
 PowellOpt = { git = "https://github.com/jacobwilliams/PowellOpt/" }
+minpack = {git = "https://github.com/fortran-lang/minpack" }
 
 [dev-dependencies]
 test-drive = {git = "https://github.com/fortran-lang/test-drive"}
