--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+fitting_data
+co2
+plot*
+model.py
+psat_fit
 fort.*
 .stuff
 build
@@ -68,3 +73,4 @@ hsprpxy
 iters
 n2c8data
 prpxy
+tools/notebooks/saturation.ipynb
