more docum, cubics and nrtl missing and... sphinx...

--- a/python/meson.build
+++ b/python/meson.build
@@ -99,6 +99,7 @@ py.install_sources(models_sources, subdir:python_lib / 'models')
 ### models.excess_gibbs
 excess_gibbs_sources = [
   python_lib / 'models' / 'excess_gibbs' / '__init__.py',
+  python_lib / 'models' / 'excess_gibbs' / 'nrtl.py',
 ]
 py.install_sources(excess_gibbs_sources, subdir:python_lib / 'models' / 'excess_gibbs')
 
