keep messing around with sphinx and tox tomorrow

--- a/python/requirements-dev.txt
+++ b/python/requirements-dev.txt
@@ -12,6 +12,7 @@ sphinx
 sphinx_copybutton
 sphinx_rtd_theme
 sphinxcontrib.bibtex
+myst-parser
 
 # Testing
 check-manifest
@@ -24,3 +25,5 @@ ipdb
 ipython
 jupyter
 matplotlib
+
+toml
