--- a/python/tox.ini
+++ b/python/tox.ini
@@ -71,5 +71,6 @@ deps =
     pytest-cov
 commands =
     coverage erase
-    pytest tests/ --cov=yaeos/ --cov-append --cov-report=term-missing
+    pip install .
+    pytest tests/ --import-mode=importlib --cov={envsitepackagesdir}/yaeos --cov-append --cov-report=term-missing
     coverage report --fail-under=70 -m
