--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -79,7 +79,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         gcc_v: [13] # Version of GFortran we want to use.
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.10", "3.11", "3.12"]
         toolchain:
           - {compiler: gcc, version: 13}
     
