--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -111,7 +111,8 @@ jobs:
 
     - name: Run tox
       run:
-        tox -r ./python
+        cd python
+        tox -r
 
   build_wheels:
     # needs: Python-API
