--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -110,7 +110,7 @@ jobs:
         version: ${{ matrix.toolchain.version }}
 
     - name: Run tox
-      run:
+      run: |
         cd python
         tox -r
 
