--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -111,8 +111,7 @@ jobs:
 
     - name: Run tox
       run: |
-        cd python
-        tox -r
+        cd python && tox -r
 
   build_wheels:
     # needs: Python-API
