--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -166,7 +166,7 @@ jobs:
   publish_to_testpypi:
     name: Publish Python 🐍 distribution 📦 to TestPyPI
     needs:
-    - build
+    - build_wheels
     runs-on: ubuntu-latest
 
     environment:
