--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -11,6 +11,8 @@ requires = [
 
 [project]
 name = "yaeos"
+description = "Thermodynamic modelling with Equation of State"
+reaedme = "README.md"
 dependencies = ["numpy"]
 version = "0.1.0"
 requires-python = ">=3.10"
