--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -12,7 +12,7 @@ requires = [
 [project]
 name = "yaeos"
 description = "Thermodynamic modelling with Equation of State"
-reaedme = "README.md"
+readme = "README.md"
 dependencies = ["numpy"]
 version = "0.1.0"
 requires-python = ">=3.10"
