--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -163,7 +163,7 @@ jobs:
           path: ./wheelhouse/*.whl
  
   publish_to_testpypi:
-    name: Publish Python 🐍 distribution 📦 to TestPyPI
+    name: Publish Python 🐍 wheels 🛞 to PyPI
     needs: build_wheels
     runs-on: ubuntu-latest
     environment:
