--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,5 +1,5 @@
 name: CI
-on: [push]
+on: [push, pull_request, release]
 
 
 jobs:
@@ -164,6 +164,7 @@ jobs:
  
   publish_to_testpypi:
     name: Publish Python 🐍 wheels 🛞 to PyPI
+    if: github.event_name == 'release'
     needs: build_wheels
     runs-on: ubuntu-latest
     environment:
