trying python docs-ghpage 2

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,9 +27,9 @@ jobs:
         cd python/docs
         sphinx-build -b html source build
         rm -r ../../doc/ford_site/page/python-api
-        mv build/_static ../../doc/ford_site/_static
         mv build ../../doc/ford_site/page/python-api
         cd ../../
+        touch doc/ford_site/.nojekyll
 
     - name: Upload Documentation
       uses: actions/upload-artifact@v2
