--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,11 @@ tools/notebooks/saturation.ipynb
 app/coso.f90
 app/fit_vl_vp.f90
 app/mine.f90
+app/fit_co2-bi.f90
+gf.py
+kij_sweep
+kij_sweep2
+lnphi.gnu
+sweep
+err
+bench
