--- a/fpm.toml
+++ b/fpm.toml
@@ -1,5 +1,5 @@
 name = "yaeos"
-version = "1.0.0"
+version = "1.1.0"
 license = "MPL"
 author = "Federico E. Benelli"
 maintainer = "federico.benelli@mi.unc.edu.ar"
@@ -24,7 +24,7 @@ source-form = "free"
 stdlib = "*"
 forbear = {git="https://github.com/szaghi/forbear"}
 json-fortran = {git="https://github.com/jacobwilliams/json-fortran"}
-# nlopt-f = {git="https://github.com/grimme-lab/nlopt-f"}
+nlopt-f = {git="https://github.com/grimme-lab/nlopt-f"}
 forsus = {git="https://github.com/ipqa-research/forsus"}
 fortime = { git = "https://github.com/gha3mi/fortime.git" }
 PowellOpt = { git = "https://github.com/jacobwilliams/PowellOpt/" }
