--- a/python/meson.build
+++ b/python/meson.build
@@ -83,6 +83,7 @@ python_lib = 'yaeos'
 python_sources = [
     python_lib / '__init__.py',
     python_lib / 'core.py',
+    python_lib / 'constants.py',
 ]
 py.install_sources(python_sources, subdir:python_lib)
 
