--- a/python/meson.build
+++ b/python/meson.build
@@ -130,8 +130,8 @@ py.extension_module(module_name,
   [c_wrapper, f2py_gen_source],
   incdir_f2py / 'fortranobject.c',
   include_directories: [inc_np],
-  dependencies : py_dep,
-  link_args: ['-L' + 'fpm_build' / 'lib', '-l' + 'yaeos', '-llapack'],
+  dependencies : [py_dep, omp],
+  link_args: ['-L' + 'fpm_build' / 'lib', '-l' + 'yaeos', '-llapack', '-fopenmp'],
   subdir: python_lib / 'lib',
   install : true,
 )
