API Python almost - need test, doc and mes around with parameters orientation

--- a/python/meson.build
+++ b/python/meson.build
@@ -102,6 +102,7 @@ excess_gibbs_sources = [
   python_lib / 'models' / 'excess_gibbs' / '__init__.py',
   python_lib / 'models' / 'excess_gibbs' / 'nrtl.py',
   python_lib / 'models' / 'excess_gibbs' / 'unifac.py',
+  python_lib / 'models' / 'excess_gibbs' / 'uniquac.py',
 ]
 py.install_sources(excess_gibbs_sources, subdir:python_lib / 'models' / 'excess_gibbs')
 
