--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -184,3 +184,5 @@ jobs:
     - run: ls -R dist
     - name: Publish distribution 📦 to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        skip-existing: true
