--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,6 +20,7 @@ jobs:
         sudo apt install -y gfortran-${GCC_V} python3-dev graphviz pandoc
         sudo pip install ford markdown
         pip install -r python/docs/requirements.txt
+        pip install python/
 
     - name: Build Developer Documentation
       run: |
