stdlib as fpm dependency instead of metapackage. Not sure which option is trully better

--- a/fpm.toml
+++ b/fpm.toml
@@ -21,7 +21,7 @@ implicit-external = false
 source-form = "free"
 
 [dependencies]
-stdlib = "*"
+stdlib = { git="https://github.com/fortran-lang/stdlib", branch="stdlib-fpm" }
 forbear = {git="https://github.com/szaghi/forbear"}
 json-fortran = {git="https://github.com/jacobwilliams/json-fortran"}
 forsus = {git="https://github.com/ipqa-research/forsus"}
