Tests Ge models

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -23,9 +23,11 @@ python =
 deps =
     ipdb
     pytest
+    fpm
 skip_install = True
 usedevelop = False
 commands =
+    fpm run ge_python_test_values
     pip install .
     pytest tests/ {posargs} --import-mode=importlib
 
@@ -71,6 +73,7 @@ deps =
     pytest-cov
 commands =
     coverage erase
+    fpm run ge_python_test_values
     pip install .
     pytest tests/ --import-mode=importlib --cov={envsitepackagesdir}/yaeos --cov-append --cov-report=term-missing
     coverage report --fail-under=70 -m
