--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,29 @@ lnphi.gnu
 sweep
 err
 bench
+GPECIN.DAT
+GPECOUT.DAT
+gpecplot.gp
+save.DAT
+fla.py
+script.py
+python/playground.ipynb
+clap
+cos
+env
+envlog
+lg
+pl
+asd
+coso
+envlops
+f
+pt
+pt_cp
+pt_hpl
+gpec_cl1.dat
+gpec_cl2.dat
+gpec_cl3.dat
+gpec_psat1.dat
+gpec_psat2.dat
+gpecout
