--- a/fpm.toml
+++ b/fpm.toml
@@ -17,7 +17,7 @@ library = true
 
 [fortran]
 implicit-typing = false
-implicit-external = false
+implicit-external = true
 source-form = "free"
 
 [dependencies]
@@ -28,6 +28,7 @@ forsus = {git="https://github.com/ipqa-research/forsus"}
 fortime = { git = "https://github.com/gha3mi/fortime.git" }
 PowellOpt = { git = "https://github.com/jacobwilliams/PowellOpt/" }
 minpack = {git = "https://github.com/fortran-lang/minpack" }
+finterp = { git = "https://github.com/jacobwilliams/finterp.git" }
 
 [dev-dependencies]
 test-drive = {git = "https://github.com/fortran-lang/test-drive"}
