Temporaly disabling ifx because I can not test it on my computer

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,8 +13,8 @@ jobs:
         toolchain:
           - {compiler: gcc, version: 13}
           - {compiler: gcc, version: 13}
-          - {compiler: intel, version: '2024.2'}
-          - {compiler: intel, version: '2023.2'}
+          # - {compiler: intel, version: '2024.2'}
+          # - {compiler: intel, version: '2023.2'}
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
