--- a/codecov.yml
+++ b/codecov.yml
@@ -21,6 +21,7 @@ github_checks:
 
 ignore:
   - build
+  - test
   - test/test_runner.f90
   - test/fixtures/taperobinson.f90
   - src/adiff/hyperdual.f90
