--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -14,7 +14,7 @@ name = "yaeos"
 description = "Thermodynamic modelling with Equation of State"
 readme = "README.md"
 dependencies = ["numpy"]
-version = "2.1.0"
+dynamic = ["version"]
 requires-python = ">=3.10"
 
 
