--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -14,7 +14,7 @@ name = "yaeos"
 description = "Thermodynamic modelling with Equation of State"
 readme = "README.md"
 dependencies = ["numpy"]
-dynamic = ["version"]
+version = "2.3.0"
 requires-python = ">=3.10"
 
 
