force to use the file?

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -69,6 +69,7 @@ jobs:
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         slug: ipqa-research/yaeos
+        files: "**/coverage.xml"
 
   Python-API:
     runs-on: ${{ matrix.os }}
