--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ford numpy matplotlib gcovr numpy scipy
+        pip install ford numpy matplotlib gcovr numpy scipy coverage
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         sudo apt-get install libnlopt-dev
 
@@ -69,7 +69,7 @@ jobs:
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         slug: ipqa-research/yaeos
-        files: "**/coverage.xml"
+        files: "coverage.xml"
 
   Python-API:
     runs-on: ${{ matrix.os }}
