--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,7 +11,7 @@ jobs:
         os: [ubuntu-latest]
         python-version: [3.9]
         toolchain:
-          - {compiler: gcc, version: 12}
+          # - {compiler: gcc, version: 12}
           - {compiler: gcc, version: 13}
           # - {compiler: intel, version: '2024.2'}
           # - {compiler: intel, version: '2023.2'}
