--- a/python/meson.build
+++ b/python/meson.build
@@ -125,6 +125,14 @@ cubic_eos_sources = [
 ]
 py.install_sources(cubic_eos_sources, subdir:python_lib / 'models' / 'residual_helmholtz' / 'cubic_eos')
 
+#### fitting
+fitting = [
+  python_lib / 'fitting' / '__init__.py',
+  python_lib / 'fitting' / 'core.py',
+  python_lib / 'fitting' / 'model_setters.py',
+  python_lib / 'fitting' / 'solvers.py'
+]
+py.install_sources(fitting, subdir:python_lib / 'fitting')
 
 # =============================================================================
 # Extension fortran module
