--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -128,13 +128,18 @@ jobs:
       # Used to host cibuildwheel
       - uses: actions/setup-python@v5
 
-      # Install gfortran on each OS
-      - name: Setup Fortran Compiler
-        uses: fortran-lang/setup-fortran@v1
-        id: setup-fortran
-        with:
-            compiler: gcc
-            version: 13
+     # # Install gfortran on each OS
+     # - name: Setup Fortran Compiler
+     #   uses: fortran-lang/setup-fortran@v1
+     #   id: setup-fortran
+     #   with:
+     #       compiler: gcc
+     #       version: 13
+      # Install gfortran14 on ubuntu
+      - name: Install 
+        run: 
+          - sudo apt install gfortran-14
+          - sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-14 14
 
       # Install fpm for Windows
       - name: Install fpm
