--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -130,8 +130,8 @@ jobs:
       
       - name: Install 
         run: |
-          - sudo apt install gfortran-14
-          - sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-14 14
+          sudo apt install gfortran-14
+          sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-14 14
 
       # Install fpm for Windows
       - name: Install fpm
