--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -32,6 +32,7 @@ markers = [
 [tool.cibuildwheel]
 build = ["cp310-*", "cp311-*", "cp312-*"]
 skip = ["*-manylinux_i686", "*-musllinux_*", "*-win32"]
+manylinux-x86_64-image = "manylinux2014"
 
 [tool.cibuildwheel.linux]
 before-all = "yum update && yum -y install lapack-devel"
