--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -35,7 +35,7 @@ skip = ["*-manylinux_i686", "*-musllinux_*", "*-win32"]
 manylinux-x86_64-image = "manylinux2014"
 
 [tool.cibuildwheel.linux]
-before-all = "yum update && yum -y install lapack-devel"
+before-all = "yum update && yum -y install lapack-devel gfortran-14"
 
 [tool.cibuildwheel.macos]
 before-all = "brew update && brew install lapack"
