--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -154,6 +154,9 @@ jobs:
           # MACOSX_DEPLOYMENT_TARGET: "13.0"
           CIBW_BEFORE_TEST: pip install pytest
           CIBW_TEST_COMMAND: pytest {project}/python/tests --import-mode=importlib
+          FC: gfortran-13
+          FPM_FC: gfortran-13
+          FPM_CC: gcc-13
 
       - uses: actions/upload-artifact@v4
         with:
