--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,7 +14,7 @@ jobs:
           - {compiler: gcc, version: 10}
           - {compiler: gcc, version: 13}
           - {compiler: intel, version: '2024.2'}
-          - {compiler: intel, version: '2023.2'}
+          # - {compiler: intel, version: '2023.2'}
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
