--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,7 +24,7 @@ jobs:
         sudo pip install ford markdown
         pip install -r python/docs/requirements.txt
         pip install -r python/requirements-build.txt
-        pip install python/
+        pip install -v python/
 
     - name: Build Developer Documentation
       run: |
