--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -30,7 +30,7 @@ markers = [
 
 
 [tool.cibuildwheel]
-build = ["cp310-*", "cp311-*", "cp312-*"]
+build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
 skip = ["*-manylinux_i686", "*-musllinux_*", "*-win32"]
 
 [tool.cibuildwheel.linux]
