--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,6 +12,7 @@ jobs:
         python-version: [3.9]
         toolchain:
           - {compiler: gcc, version: 10}
+          - {compiler: gcc, version: 14}
           - {compiler: intel, version: '2024.2'}
           # - {compiler: intel, version: '2023.2'}
     steps:
