--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install Dependencies Ubuntu
       run: |
         sudo apt-get update
-        sudo apt install -y python3-dev graphviz pandoc
+        sudo apt install -y python3-dev graphviz pandoc libblas-dev liblapack-dev
         sudo pip install ford markdown
         pip install -r python/docs/requirements.txt
         pip install -r python/requirements-build.txt
