--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -142,7 +142,7 @@ jobs:
       # CiBuildWheel
       - name: Install dependencies
         run: |
-          python -m pip install cibuildwheel==2.19.2
+          python -m pip install cibuildwheel
 
       - name: Build wheels
         run: python -m cibuildwheel python/ --output-dir wheelhouse --debug-traceback
