--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -13,7 +13,7 @@ requires = [
 name = "yaeos"
 description = "Thermodynamic modelling with Equation of State"
 readme = "README.md"
-dependencies = ["numpy", "scipy", "pandas", "intersect"]
+dependencies = ["IPython", "numpy", "scipy", "pandas", "intersect", "matplotlib"]
 version = "3.1.0"
 requires-python = ">=3.10"
 
