tox deactivated shit fixing - still missing...

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -42,9 +42,10 @@ deps =
        flake8-import-order
        pep8-naming
 commands =
-        flake8 --ignore=N803,W503 tests/ yaeos/ {posargs}
+        flake8 --ignore=N803,W503,E203 tests/ yaeos/ {posargs}
         # N803: argument name should be lowercase
         # W503: line break before binary operator
+        # E203 whitespace before ':'
 
 
 [testenv:docstyle]
