--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -34,7 +34,7 @@ build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
 skip = ["*-manylinux_i686", "*-musllinux_*", "*-win32"]
 
 [tool.cibuildwheel.linux]
-before-all = "yum update && yum -y install lapack-devel"
+before-all = "yum -y install lapack-devel"
 
 [tool.cibuildwheel.macos]
 before-all = "brew update && brew install lapack"
