--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -120,7 +120,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest] #, windows-latest, macos-13, macos-14]
+        os: [ubuntu-latest, windows-latest] #, windows-latest, macos-13, macos-14]
     
     steps:
       - uses: actions/checkout@v4
