--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -149,7 +149,7 @@ jobs:
 
         # to supply options, put them in 'env', like:
         env:
-          # CIBW_BUILD_VERBOSITY: 3
+          CIBW_BUILD_VERBOSITY: 3
           CIBW_BUILD_FRONTEND: build
           # MACOSX_DEPLOYMENT_TARGET: "13.0"
           CIBW_BEFORE_TEST: pip install pytest
