--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -49,10 +49,10 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Install dependencies
+        # python -m pip install --upgrade pip
+        # pip install ford numpy matplotlib gcovr numpy scipy coverage
+        # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       run: |
-        python -m pip install --upgrade pip
-        pip install ford numpy matplotlib gcovr numpy scipy coverage
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         sudo apt-get install libnlopt-dev libblas-dev liblapack-dev
 
     - name: Run tests without coverage
