--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,12 +22,16 @@ jobs:
         submodules: false
 
     - name: Setup Fortran Compiler
+      if: |
+      !(
+        (matrix.os == 'windows-latest' && matrix.toolchain.compiler == 'intel') ||
+        (matrix.os == 'windows-latest' && matrix.toolchain.compiler == 'gcc' && matrix.toolchain.version > 14)
+      )
       uses: fortran-lang/setup-fortran@v1
       id: setup-fortran
       with:
-        compiler: ${{ matrix.toolchain.compiler }}
-        version: ${{ matrix.toolchain.version }}
-      
+      compiler: ${{ matrix.toolchain.compiler }}
+      version: ${{ matrix.toolchain.version }}    
     # Install fpm for Windows
     - name: Install fpm
       if: ${{ matrix.os == 'windows-latest' }}
