--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,7 +25,7 @@ jobs:
       if: |
       !(
         (matrix.os == 'windows-latest' && matrix.toolchain.compiler == 'intel') ||
-        (matrix.os == 'windows-latest' && matrix.toolchain.compiler == 'gcc' && matrix.toolchain.version > 14)
+        (matrix.os == 'windows-latest' && matrix.toolchain.compiler == 'gcc' && matrix.toolchain.version >= 14)
       )
       uses: fortran-lang/setup-fortran@v1
       id: setup-fortran
