--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,11 +22,7 @@ jobs:
         submodules: false
 
     - name: Setup Fortran Compiler
-      if: |
-      !(
-        (matrix.os == 'windows-latest' && matrix.toolchain.compiler == 'intel') ||
-        (matrix.os == 'windows-latest' && matrix.toolchain.compiler == 'gcc' && matrix.toolchain.version >= 14)
-      )
+      if: ${{ (matrix.os == 'windows-latest' && matrix.toolchain.compiler == 'intel') || (matrix.os == 'windows-latest' && matrix.toolchain.compiler == 'gcc' && matrix.toolchain.version >= 14) }}
       uses: fortran-lang/setup-fortran@v1
       id: setup-fortran
       with:
