--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,6 +18,8 @@ jobs:
         exclude:
           - os: windows-latest
             toolchain: {compiler: gcc, version: 14}
+          - os: windows-latest
+            toolchain: {compiler: "intel", version: '2024.2'}
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
