--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -70,7 +70,7 @@ jobs:
     - name: Install conda dependencies
       if: ${{ matrix.os == 'windows-latest' }}
       run: |
-        conda install -y -c conda-forge lapack gfortran fpm
+        conda install -y -c conda-forge liblapack gfortran fpm
 
     - name: Run tests without coverage
       if: ${{ env.FC != 'gfortran' }}
