--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -66,6 +66,7 @@ jobs:
       with:
         miniconda-version: "latest"
         autoactivate-base: true
+        activate-environment: ""
     
     - name: Install conda dependencies
       if: ${{ matrix.os == 'windows-latest' }}
