--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -73,6 +73,14 @@ jobs:
       run: |
         conda install -y -c conda-forge liblapack gfortran fpm
 
+    - name: Bash
+      if: ${{ matrix.os == 'windows-latest' }}
+      shell: bash -el {0}
+      run: |
+        conda info
+        conda list
+        fpm test --profile release --flag "-g" --compiler ${{ env.FC }} --c-compiler gcc
+
     - name: Run tests without coverage
       if: ${{ env.FC != 'gfortran' }}
       run: |
@@ -83,6 +91,7 @@ jobs:
       run: |
         fpm test --profile release --flag "-g -coverage" --compiler ${{ env.FC }} --c-compiler gcc
         bash ci/ci.sh
+
 
     - name: Coverage
       run: bash ci/ci.sh coverage
