--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -73,12 +73,13 @@ jobs:
       run: |
         conda install -y -c conda-forge liblapack gfortran fpm
 
-    - name: Bash
+    - name: Conda FPM run
       if: ${{ matrix.os == 'windows-latest' }}
       shell: bash -el {0}
       run: |
         conda info
         conda list
+        export LD_LIBRARY_PATH=$CONDA_PREFIX/lib:$LD_LIBRARY_PATH
         fpm test --profile release --flag "-g" --compiler ${{ env.FC }} --c-compiler gcc
 
     - name: Run tests without coverage
